--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -139,15 +139,15 @@
         "    encoder_max_length = max([len(txt) for txt in train_input_data])\n",
         "    decoder_max_length = max([len(txt) for txt in train_target_data])\n",
         "\n",
-        "    print(\"Max sequence length for inputs:\", encoder_max_length)\n",
-        "    print(\"Max sequence length for outputs:\", decoder_max_length)\n",
+        "    print(\"Max length for inputs:\", encoder_max_length)\n",
+        "    print(\"Max length for outputs:\", decoder_max_length)\n",
         "\n",
         "    # number of input and target characters\n",
         "    num_encoder_tokens = len(input_data_characters)\n",
         "    num_decoder_tokens = len(target_data_characters)  \n",
         "    \n",
-        "    print(\"Number of unique input tokens:\", num_encoder_tokens)\n",
-        "    print(\"Number of unique output tokens:\", num_decoder_tokens)\n",
+        "    print(\"unique input tokens:\", num_encoder_tokens)\n",
+        "    print(\"output tokens:\", num_decoder_tokens)\n",
         "\n",
         "    # create an index\n",
         "    input_token_idx = dict([(char, i) for i, char in enumerate(input_data_characters)])\n",
@@ -272,7 +272,6 @@
         "class AttentionLayer(Layer):\n",
         "    \"\"\"\n",
         "    This class implements Bahdanau attention (https://arxiv.org/pdf/1409.0473.pdf).\n",
-        "    There are three sets of weights introduced W_a, U_a, and V_a\n",
         "    \n",
         "    Credits to Tensorflow.org and https://github.com/thushv89/attention_keras/blob/master/src/layers/attention.py\n",
         "     \"\"\"\n",
@@ -300,9 +299,7 @@
         "        super(AttentionLayer, self).build(input_shape) \n",
         "\n",
         "    def call(self, inputs, verbose=False):\n",
-        "        \"\"\"\n",
-        "        inputs: [encoder_output_sequence, decoder_output_sequence]\n",
-        "        \"\"\"\n",
+        "\n",
         "        assert type(inputs) == list\n",
         "        encoder_out_seq, decoder_out_seq = inputs\n",
         "        if verbose:\n",
@@ -310,34 +307,27 @@
         "            print('decoder_out_seq>', decoder_out_seq.shape)\n",
         "\n",
         "        def energy_step(inputs, states):\n",
-        "            \"\"\" Step function for computing energy for a single decoder state\n",
-        "            inputs: (batchsize * 1 * de_in_dim)\n",
-        "            states: (batchsize * 1 * de_latent_dim)\n",
-        "            \"\"\"\n",
+        "\n",
         "\n",
         "            assert_msg = \"States must be an iterable. Got {} of type {}\".format(states, type(states))\n",
         "            assert isinstance(states, list) or isinstance(states, tuple), assert_msg\n",
         "\n",
-        "            \"\"\" Some parameters required for shaping tensors\"\"\"\n",
+        "         \n",
         "            en_seq_len, en_hidden = encoder_out_seq.shape[1], encoder_out_seq.shape[2]\n",
         "            de_hidden = inputs.shape[-1]\n",
         "\n",
-        "            \"\"\" Computing S.Wa where S=[s0, s1, ..., si]\"\"\"\n",
         "            \n",
         "            W_a_dot_s = K.dot(encoder_out_seq, self.W_a)\n",
         "\n",
-        "            \"\"\" Computing hj.Ua \"\"\"\n",
         "            U_a_dot_h = K.expand_dims(K.dot(inputs, self.U_a), 1)  # <= batch_size, 1, latent_dim\n",
         "            if verbose:\n",
         "                print('Ua.h>', U_a_dot_h.shape)\n",
         "\n",
-        "            \"\"\" tanh(S.Wa + hj.Ua) \"\"\"\n",
         "            \n",
         "            Ws_plus_Uh = K.tanh(W_a_dot_s + U_a_dot_h)\n",
         "            if verbose:\n",
         "                print('Ws+Uh>', Ws_plus_Uh.shape)\n",
         "\n",
-        "            \"\"\" softmax(va.tanh(S.Wa + hj.Ua)) \"\"\"\n",
         "           \n",
         "            e_i = K.squeeze(K.dot(Ws_plus_Uh, self.V_a), axis=-1)\n",
         "           \n",
@@ -348,7 +338,6 @@
         "            return e_i, [e_i]\n",
         "\n",
         "        def context_step(inputs, states):\n",
-        "            \"\"\" Step function for computing ci using ei \"\"\"\n",
         "            assert_msg = \"States must be an iterable. Got {} of type {}\".format(states, type(states))\n",
         "            assert isinstance(states, list) or isinstance(states, tuple), assert_msg\n",
         "\n",
@@ -358,18 +347,15 @@
         "            return c_i, [c_i]\n",
         "        fake_state_c = K.sum(encoder_out_seq, axis=1)\n",
         "        fake_state_e = K.sum(encoder_out_seq, axis=2)  \n",
-        "        \"\"\" Computing energy outputs \"\"\"\n",
         "        last_out, e_outputs, _ = K.rnn(\n",
         "            energy_step, decoder_out_seq, [fake_state_e],\n",
         "        )\n",
-        "        \"\"\" Computing context vectors \"\"\"\n",
         "        last_out, c_outputs, _ = K.rnn(\n",
         "            context_step, e_outputs, [fake_state_c],\n",
         "        )\n",
         "        return c_outputs, e_outputs\n",
         "\n",
         "    def compute_output_shape(self, input_shape):\n",
-        "        \"\"\" Outputs produced by the layer \"\"\"\n",
         "        return [\n",
         "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[1][2])),\n",
         "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[0][1]))\n",
